# dstruct

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  dlist.hpp  dlist.tpp  ll_interface.hpp  main.cpp  node.hpp  queue.hpp  queue.tpp  sclist.hpp  sclist.tpp  slist.cpp  slist.hpp  slist.tpp  stack.cpp  stack.hpp  stack.tpp
include/: dlist.hpp  ll_interface.hpp  node.hpp  queue.hpp  sclist.hpp  slist.hpp  stack.hpp  test  test.cpp  tree  tree.cpp
tests/: CMakeLists.txt
